docgen: fix 'unresolved ref' style in func name
It was not showing because it is a 'strong' tag within an 'h3' tag,
while the style requested a 'strong' as direct child of a 'pre'.

--- a/docs/style.css
+++ b/docs/style.css
@@ -120,7 +120,7 @@ body > div.var > pre u::after {
 	content: "/*unconfirmed type*/";
 }
 /*reference to unknown struct/enum*/
-body > div > pre > strong {
+body > div > pre strong {
 	background: #f00;
 	color: #fff;
 }
